se termina contacto

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "emailjs-com": "^2.6.4",
     "firebase": "^8.1.1",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
