--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "4.0.1",
     "react-tooltip": "^4.2.11",
     "react-with-firebase-auth": "^1.3.2",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
