--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@pdftron/webviewer": "^7.2.0",
+    "@react-pdf-viewer/core": "^2.4.0",
+    "@react-pdf/renderer": "^1.6.13",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
@@ -11,16 +14,21 @@
     "emailjs-com": "^2.6.4",
     "firebase": "^8.1.1",
     "jquery": "^3.5.1",
+    "pdf-viewer-reactjs": "^2.2.3",
+    "pdfjs-dist": "^2.6.347",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
+    "react-pdf": "^5.2.0",
     "react-player": "^2.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-tooltip": "^4.2.11",
     "react-with-firebase-auth": "^1.3.2",
+    "reactjs-pdf-reader": "^1.0.12",
     "sweetalert": "^2.1.2",
+    "typescript": "^4.1.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
