--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
     "react-pdf": "^5.2.0",
+    "react-phone-number-input": "^3.1.16",
     "react-player": "^2.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-select": "^4.1.0",
     "react-tooltip": "^4.2.11",
     "react-with-firebase-auth": "^1.3.2",
     "reactjs-pdf-reader": "^1.0.12",
