--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
+    "react-google-button": "^0.7.2",
     "react-google-docs-viewer": "^1.0.1",
     "react-pdf": "^5.2.0",
     "react-phone-number-input": "^3.1.16",
