--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/utils": "^4.11.2",
     "@pdftron/webviewer": "^7.2.0",
     "@react-pdf-viewer/core": "^2.4.0",
     "@react-pdf/renderer": "^1.6.13",
