--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "emailjs-com": "^2.6.4",
     "firebase": "^8.1.1",
     "i": "^0.3.6",
+    "i18next": "^19.9.2",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-xhr-backend": "^3.2.2",
     "jquery": "^3.5.1",
     "npm": "^7.5.6",
     "pdf-viewer-reactjs": "^2.2.3",
@@ -27,6 +30,7 @@
     "react-facebook-login": "^4.1.1",
     "react-google-button": "^0.7.2",
     "react-google-docs-viewer": "^1.0.1",
+    "react-i18next": "^11.8.9",
     "react-pdf": "^5.2.0",
     "react-phone-number-input": "^3.1.16",
     "react-player": "^2.7.0",
