--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-with-firebase-auth": "^1.3.2",
     "reactjs-pdf-reader": "^1.0.12",
     "sweetalert": "^2.1.2",
+    "translate-google-api": "^1.0.4",
     "typescript": "^4.1.5",
     "web-vitals": "^0.2.4"
   },
