--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@pdftron/webviewer": "^7.2.0",
     "@react-pdf-viewer/core": "^2.4.0",
     "@react-pdf/renderer": "^1.6.13",
+    "@sweetalert/with-react": "^0.1.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
@@ -22,6 +23,7 @@
     "i18next-xhr-backend": "^3.2.2",
     "jquery": "^3.5.1",
     "npm": "^7.5.6",
+    "password-validator": "^5.1.1",
     "pdf-viewer-reactjs": "^2.2.3",
     "pdfjs-dist": "^2.6.347",
     "popper.js": "^1.16.1",
