--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@pdftron/webviewer": "^7.2.0",
     "@react-pdf-viewer/core": "^2.4.0",
     "@react-pdf/renderer": "^1.6.13",
+    "@stripe/react-stripe-js": "^1.4.0",
+    "@stripe/stripe-js": "^1.13.1",
     "@sweetalert/with-react": "^0.1.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
