--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pdfjs-dist": "^2.6.347",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
+    "react-currency-input-field": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
     "react-google-button": "^0.7.2",
