--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.3.10",
     "@material-ui/utils": "^4.11.2",
     "@pdftron/webviewer": "^7.2.0",
     "@react-pdf-viewer/core": "^2.4.0",
@@ -17,6 +19,7 @@
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "date-fns": "^2.19.0",
     "emailjs-com": "^2.6.4",
     "firebase": "^8.1.1",
     "i": "^0.3.6",
