--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-facebook-login": "^4.1.1",
     "react-google-button": "^0.7.2",
     "react-google-docs-viewer": "^1.0.1",
+    "react-google-recaptcha": "^2.1.0",
     "react-i18next": "^11.8.9",
     "react-pdf": "^5.2.0",
     "react-phone-number-input": "^3.1.16",
