--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-google-button": "^0.7.2",
     "react-google-docs-viewer": "^1.0.1",
     "react-i18next": "^11.8.9",
+    "react-particles-js": "^3.4.1",
     "react-pdf": "^5.2.0",
     "react-phone-number-input": "^3.1.16",
     "react-player": "^2.7.0",
