--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "react-player": "^2.7.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.1",
     "react-select": "^4.1.0",
     "react-tooltip": "^4.2.11",
     "react-with-firebase-auth": "^1.3.2",
