--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "i18next": "^19.9.2",
     "i18next-browser-languagedetector": "^6.0.1",
     "i18next-xhr-backend": "^3.2.2",
+    "imask": "^6.0.7",
     "jquery": "^3.5.1",
     "npm": "^7.5.6",
     "password-validator": "^5.1.1",
@@ -33,6 +34,7 @@
     "pdfjs-dist": "^2.6.347",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
+    "react-credit-cards": "^0.8.3",
     "react-currency-input-field": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
