--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-google-docs-viewer": "^1.0.1",
     "react-google-recaptcha": "^2.1.0",
     "react-i18next": "^11.8.9",
+    "react-number-format": "^4.5.3",
     "react-pdf": "^5.2.0",
     "react-phone-number-input": "^3.1.16",
     "react-player": "^2.7.0",
