--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.3.10",
     "@material-ui/utils": "^4.11.2",
     "@pdftron/webviewer": "^7.2.0",
@@ -36,6 +37,7 @@
     "react": "^17.0.1",
     "react-credit-cards": "^0.8.3",
     "react-currency-input-field": "^3.3.0",
+    "react-detect-offline": "^2.4.3",
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
     "react-google-button": "^0.7.2",
