--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-i18next": "^11.8.9",
     "react-number-format": "^4.5.3",
     "react-pdf": "^5.2.0",
+    "react-phone-input-2": "^2.14.0",
     "react-phone-number-input": "^3.1.16",
     "react-player": "^2.7.0",
     "react-router-dom": "^5.2.0",
