--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "crypto-js": "^4.0.0",
     "date-fns": "^2.19.0",
     "emailjs-com": "^2.6.4",
     "firebase": "^8.1.1",
@@ -39,11 +40,13 @@
     "react-currency-input-field": "^3.3.0",
     "react-detect-offline": "^2.4.3",
     "react-dom": "^17.0.1",
+    "react-easy-crop": "^3.3.2",
     "react-facebook-login": "^4.1.1",
     "react-google-button": "^0.7.2",
     "react-google-docs-viewer": "^1.0.1",
     "react-google-recaptcha": "^2.1.0",
     "react-i18next": "^11.8.9",
+    "react-image-crop": "^8.6.6",
     "react-number-format": "^4.5.3",
     "react-pdf": "^5.2.0",
     "react-phone-input-2": "^2.14.0",
