--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-pdf": "^5.2.0",
     "react-phone-number-input": "^3.1.16",
     "react-player": "^2.7.0",
+    "react-responsive-carousel": "^3.2.18",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
