--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-phone-number-input": "^3.1.16",
     "react-player": "^2.7.0",
     "react-qr-code": "^1.1.1",
+    "react-qr-scanner": "^1.0.0-alpha.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-select": "^4.1.0",
