--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "i18next-browser-languagedetector": "^6.0.1",
     "i18next-xhr-backend": "^3.2.2",
     "jquery": "^3.6.0",
+    "node-sass": "^4.14.1",
     "npm": "^7.5.6",
     "pdf-viewer-reactjs": "^2.2.3",
     "pdfjs-dist": "^2.6.347",
@@ -46,6 +47,7 @@
     "sweetalert": "^2.1.2",
     "translate-google-api": "^1.0.4",
     "typescript": "^4.1.5",
+    "vuera": "^0.2.7",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
