--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-phone-number-input": "^3.1.16",
     "react-player": "^2.7.0",
     "react-qr-code": "^1.1.1",
+    "react-qr-reader": "^2.2.1",
     "react-qr-scanner": "^1.0.0-alpha.7",
     "react-responsive-carousel": "^3.2.18",
     "react-reveal": "^1.2.2",
