--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-i18next": "^11.8.9",
     "react-image-crop": "^8.6.6",
     "react-number-format": "^4.5.3",
+    "react-otp-input": "^2.4.0",
     "react-particles-js": "^3.4.1",
     "react-pdf": "^5.2.0",
     "react-phone-input-2": "^2.14.0",
